err/bu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apipkg-1.4.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/bu'...
Listing './lib/python3.5/site-packages/bu/actions'...
Compiling './lib/python3.5/site-packages/bu/actions/py_action.py'...
***   File "./lib/python3.5/site-packages/bu/actions/py_action.py", line 39
    exec code in namespace.copy(), globals()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bu/lib'...
Compiling './lib/python3.5/site-packages/bu/main.py'...
***   File "./lib/python3.5/site-packages/bu/main.py", line 112
    except BuError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bu/tools'...
Compiling './lib/python3.5/site-packages/bu/tools/busphinx.py'...
***   File "./lib/python3.5/site-packages/bu/tools/busphinx.py", line 18
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bu-0.1.egg-info'...
Listing './lib/python3.5/site-packages/execnet'...
Listing './lib/python3.5/site-packages/execnet/script'...
Listing './lib/python3.5/site-packages/execnet-1.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
